fix: card size on mobile landscape

--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -1,7 +1,7 @@
 .dots-map__card {
   border-radius: 8px;
   width: 100%;
-  max-height: 518px;
+  max-height: 100vh;
   background: white;
   border: 0.5px solid #d3d3d3;
   box-shadow: 0px 3px 7px rgba(0, 0, 0, 0.04);
